# webgpu-tutorial

./: Cargo.toml
engine/: Cargo.toml
engine/src/: camera.rs  compute.wgsl  lib.rs  shader.wgsl  texture.rs  vertex.rs
src/: main.rs
