[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.4"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16.0"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"                                         # NEW!

# The jpeg decoder that image includes uses rayon to speed up the decoding with threads.
# WASM doesn't support threads currently so we need to disable this to support web.
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
